Add current status query